[gd_scene load_steps=22 format=1]

[ext_resource path="res://levels/fundo.png" type="Texture" id=1]
[ext_resource path="res://actors/mainCharacter/Players_spritesheet_20x33px.png" type="Texture" id=2]
[ext_resource path="res://actors/mainCharacter/characterBehaviour.gd" type="Script" id=3]
[ext_resource path="res://actors/mainCharacter/actionsComponent/actionsComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/mainCharacter/comboComponent/comboComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/inputResolver/inputResolver.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/theme.tres" type="Theme" id=7]
[ext_resource path="res://screens/mainSceneUI/actionsInterface.tscn" type="PackedScene" id=8]
[ext_resource path="res://actors/turnController/turnController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Crowd spritesheet20x33.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]

resource/name = "defend"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ Rect2( 0, 6.5, 15, 26.5 ), Rect2( 41, 6.5, 13, 26.5 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 540, 460 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "exposed"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 540, 460 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ Rect2( 0, 6.5, 15, 26.5 ), Rect2( 20, 6.5, 11, 26.5 ) ] }

[sub_resource type="Animation" id=10]

resource/name = "getHit"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ Rect2( 100, 4, 13, 29 ), Rect2( 0, 6.5, 15, 26.5 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 540, 460 ) ] }

[sub_resource type="Animation" id=3]

resource/name = "kick"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 0.6 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ Rect2( 0, 6.5, 15, 26.5 ), Rect2( 81, 6.5, 19, 26.5 ), Rect2( 0, 6.5, 15, 26.5 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.3, 0.6, 0.9 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 540, 460 ), Vector2( 660, 460 ), Vector2( 660, 460 ), Vector2( 540, 460 ) ] }
tracks/2/type = "method"
tracks/2/path = NodePath("../turnController")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"ResolveTurn" } ] }
tracks/3/type = "method"
tracks/3/path = NodePath("../playerTwo")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[ 20 ], "method":"DamageCharacter" } ] }

[sub_resource type="Animation" id=4]

resource/name = "punch"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 0.6 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ Rect2( 0, 6.5, 15, 26.5 ), Rect2( 61, 6.5, 19, 26.5 ), Rect2( 0, 6.5, 15, 26.5 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.3, 0.5, 0.8 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 540, 460 ), Vector2( 650, 460 ), Vector2( 650, 460 ), Vector2( 540, 460 ) ] }
tracks/2/type = "method"
tracks/2/path = NodePath("../turnController")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"ResolveTurn" } ] }
tracks/3/type = "method"
tracks/3/path = NodePath("../playerTwo")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.4 ), "transitions":FloatArray( 1 ), "values":[ { "args":[ 12 ], "method":"DamageCharacter" } ] }

[sub_resource type="Animation" id=5]

resource/name = "testAnim"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3, 0.6, 0.8, 1 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, 20 ), Vector2( 0, 0 ) ] }
tracks/1/type = "method"
tracks/1/path = NodePath("../turnController")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 2 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"ResolveTurn" } ] }

[sub_resource type="Animation" id=6]

resource/name = "defend"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ Rect2( 0, 38, 15, 28 ), Rect2( 41, 38, 13, 28 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 770, 460 ) ] }

[sub_resource type="Animation" id=7]

resource/name = "exposed"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ Rect2( 0, 38, 15, 28 ), Rect2( 21, 38, 11, 28 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 770, 460 ) ] }

[sub_resource type="Animation" id=11]

resource/name = "getHit"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ Rect2( 100, 37, 12, 29 ), Rect2( 0, 38, 15, 28 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 770, 460 ) ] }

[sub_resource type="Animation" id=8]

resource/name = "kick"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3, 0.6, 1 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 770, 460 ), Vector2( 680, 460 ), Vector2( 680, 460 ), Vector2( 770, 460 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.4, 0.6 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ Rect2( 0, 38, 15, 28 ), Rect2( 81, 38, 19, 28 ), Rect2( 0, 38, 15, 28 ) ] }
tracks/2/type = "method"
tracks/2/path = NodePath("../turnController")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"ResolveTurn" } ] }
tracks/3/type = "method"
tracks/3/path = NodePath("../playerOne")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[ 20 ], "method":"DamageCharacter" } ] }

[sub_resource type="Animation" id=9]

resource/name = "punch"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 0.6 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ Rect2( 0, 38, 15, 28 ), Rect2( 61, 38, 19, 28 ), Rect2( 0, 38, 15, 28 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.3, 0.5, 0.8 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 770, 460 ), Vector2( 650, 460 ), Vector2( 650, 460 ), Vector2( 770, 460 ) ] }
tracks/2/type = "method"
tracks/2/path = NodePath("../turnController")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"ResolveTurn" } ] }
tracks/3/type = "method"
tracks/3/path = NodePath("../playerOne")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.4 ), "transitions":FloatArray( 1 ), "values":[ { "args":[ 12 ], "method":"DamageCharacter" } ] }

[node name="main" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="background" type="Sprite" parent="."]

transform/scale = Vector2( 8, 8 )
texture = ExtResource( 1 )
centered = false

[node name="playerOne" type="Sprite" parent="."]

transform/pos = Vector2( 540, 460 )
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 6.5, 15, 26.5 )
script/script = ExtResource( 3 )
currentStance = null
actionsInterfacePath = NodePath("../UILayer/UI/actionsInterface")
healthBarPath = NodePath("../UILayer/UI/healthBar")

[node name="actionsComponent" parent="playerOne" instance=ExtResource( 4 )]

[node name="animator" type="AnimationPlayer" parent="playerOne"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/defend = SubResource( 1 )
anims/exposed = SubResource( 2 )
anims/getHit = SubResource( 10 )
anims/kick = SubResource( 3 )
anims/punch = SubResource( 4 )
anims/testAnim = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="comboComponent" parent="playerOne" instance=ExtResource( 5 )]

[node name="inputResolver" parent="playerOne" instance=ExtResource( 6 )]

[node name="playerTwo" type="Sprite" parent="."]

transform/pos = Vector2( 770, 460 )
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
flip_h = true
region = true
region_rect = Rect2( 0, 38, 15, 28 )
script/script = ExtResource( 3 )
currentStance = null
actionsInterfacePath = NodePath("../UILayer/UI/actionsInterface2")
healthBarPath = NodePath("../UILayer/UI/healthBar2")

[node name="actionsComponent" parent="playerTwo" instance=ExtResource( 4 )]

[node name="animator" type="AnimationPlayer" parent="playerTwo"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/defend = SubResource( 6 )
anims/exposed = SubResource( 7 )
anims/getHit = SubResource( 11 )
anims/kick = SubResource( 8 )
anims/punch = SubResource( 9 )
anims/testAnim = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="comboComponent" parent="playerTwo" instance=ExtResource( 5 )]

[node name="inputResolver" parent="playerTwo" instance=ExtResource( 6 )]

[node name="UILayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="UI" type="Control" parent="UILayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="healthBar" type="ProgressBar" parent="UILayer/UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 7 )
margin/left = 30.0
margin/top = 10.0
margin/right = 510.0
margin/bottom = 40.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
percent/visible = true

[node name="healthBar2" type="ProgressBar" parent="UILayer/UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 7 )
margin/left = 770.0
margin/top = 10.0
margin/right = 1250.0
margin/bottom = 40.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
percent/visible = true

[node name="actionsInterface" parent="UILayer/UI" instance=ExtResource( 8 )]

visibility/visible = false
margin/top = 110.0
margin/bottom = 150.0

[node name="comboButton" parent="UILayer/UI/actionsInterface"]

visibility/visible = false

[node name="actionsInterface2" parent="UILayer/UI" instance=ExtResource( 8 )]

visibility/visible = false
margin/left = 1210.0
margin/top = 110.0
margin/right = 1250.0
margin/bottom = 150.0

[node name="comboButton" parent="UILayer/UI/actionsInterface2"]

visibility/visible = false

[node name="turnController" parent="." instance=ExtResource( 9 )]

margin/left = 624.0
margin/top = 65.0
margin/right = 664.0
margin/bottom = 105.0

[node name="crowd" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Sprite" type="Sprite" parent="crowd"]

visibility/visible = false
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 10 )
centered = false

[connection signal="released" from="UILayer/UI/actionsInterface/punchButton" to="playerOne" method="_on_punchButton_released"]

[connection signal="released" from="UILayer/UI/actionsInterface/kickButton" to="playerOne" method="_on_kickButton_released"]

[connection signal="released" from="UILayer/UI/actionsInterface/defenseButton" to="playerOne" method="_on_defenseButton_released"]

[connection signal="released" from="UILayer/UI/actionsInterface/comboButton" to="playerOne" method="_on_comboButton_released"]

[connection signal="released" from="UILayer/UI/actionsInterface2/punchButton" to="playerTwo" method="_on_punchButton_released"]

[connection signal="released" from="UILayer/UI/actionsInterface2/kickButton" to="playerTwo" method="_on_kickButton_released"]

[connection signal="released" from="UILayer/UI/actionsInterface2/defenseButton" to="playerTwo" method="_on_defenseButton_released"]

[connection signal="released" from="UILayer/UI/actionsInterface2/comboButton" to="playerTwo" method="_on_comboButton_released"]


[editable path="UILayer/UI/actionsInterface"]
[editable path="UILayer/UI/actionsInterface2"]
